Fixed missing border in search metadata

--- a/src/assets/stylesheets/layout/_search.scss
+++ b/src/assets/stylesheets/layout/_search.scss
@@ -435,7 +435,7 @@ $md-toggle__search--checked:
   &__scrollwrap {
     height: 100%;
     background-color: var(--md-default-bg-color);
-    box-shadow: inset 0 px2rem(1px) 0 var(md-color-text--lightest);
+    box-shadow: inset 0 px2rem(1px) 0 var(--md-default-fg-color--lightest);
     overflow-y: auto;
     scroll-snap-type: y mandatory;
     -webkit-overflow-scrolling: touch;
